--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 <version>0.0.1-SNAPSHOT</version>
 
 <properties>
+	<maven.compiler.source>1.17</maven.compiler.source>
+    <maven.compiler.target>1.17</maven.compiler.target>
+	<java.version>1.17</java.version>
 	<lwjgl.version>3.3.0</lwjgl.version>
 	<joml.version>1.10.3</joml.version>
 	<lwjgl.natives>natives-windows</lwjgl.natives>
