--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,22 @@
 {
     "version": "0.2.0",
         "configurations": [
-
+            {
+                "type": "java",
+                "name": "Launch Testbed",
+                "request": "launch",
+                "mainClass": "test.tests.physics.Testbed",
+                "projectName": "kronos-engine"
+            },
             {
                 "type": "java",
                 "name": "Debug (Launch) with Arguments Prompt",
                 "request": "launch",
                 "mainClass": "net.acidfrog.kronos.core.architecture.EntryPoint",
                 "args": "${command:SpecifyProgramArgs}",
-                "vmArgs" : "-XstartOnFirstThread"
+                "stopAtEntry": false,
+                "console": "integratedTerminal",
+                "vmargs": "-Xmx1G -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:CMSIncrementalDutyCycle=10 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:"
             }
         ]
 }
