--- a/data/.properties
+++ b/data/.properties
@@ -25,8 +25,8 @@ kronos.fastmath = true
 # path for serialization
 kronos.kronSavePath = "data/kron/"
 
-# the gravitational constant
-kronos.gravity = 9.81
+# the gravitational constant # 9.81
+kronos.gravity = 955
 
 # enable/disable extremly fast math, but imprecise results
 kronos.impreciseMath = false
