--- a/data/.properties
+++ b/data/.properties
@@ -1,41 +1,15 @@
-# the bits for the sin lookup table
-kronos.sinLookupBits = 14
-
-# enable/disable logging to a file
-kronos.logToFile = true
-
-# enable/disable release mode
-kronos.release = false
-
-# enable/disable ANSI color codes for logging
-kronos.escalationColors = true
-
-# enable/disable the use of a sin lookup table
-kronos.sinLookup = true
-
-# the physics update rate
-kronos.physicsUpdateRate = 50
-
-# the regular update rate for the game
-kronos.regularUpdateRate = 60
-
-# enable/disable fast approximations of certian math functions
-kronos.fastmath = true
-
-# path for serialization
-kronos.kronSavePath = "data/kron/"
-
-# the gravitational constant # 9.81
-kronos.gravity = 955
-
-# enable/disable extremly fast math, but imprecise results
-kronos.impreciseMath = false
-
-# enable/disable debug mode
-kronos.debug = true
-
-# path for scene exports
-kronos.sceneSavePath = "data/scenes/"
-
-# path for logging to file
-kronos.loggerSavePath = "logs/"
+#Tue Aug 09 00:44:15 CDT 2022
+kronos.sinLookupBits=14
+kronos.logToFile=true
+kronos.release=false
+kronos.escalationColors=true
+kronos.sinLookup=true
+kronos.physicsUpdateRate=50
+kronos.fastmath=true
+kronos.regularUpdateRate=60
+kronos.kronSavePath=data/kron/
+kronos.gravity=9.81
+kronos.impreciseMath=false
+kronos.debug=true
+kronos.sceneSavePath=data/scenes/
+kronos.loggerSavePath=logs/
